syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Lab3.Task2.Presentation";

package order;

enum OrderHistoryItemKind {
  ORDER_HISTORY_ITEM_KIND_UNSPECIFIED = 0;
  ORDER_HISTORY_ITEM_KIND_CREATED = 1;
  ORDER_HISTORY_ITEM_KIND_ITEM_ADDED = 2;
  ORDER_HISTORY_ITEM_KIND_ITEM_REMOVED = 3;
  ORDER_HISTORY_ITEM_KIND_STATE_CHANGED = 4;
}

message HistoryItemPayloadCreated {
  string created_by = 1;
}
message HistoryItemPayloadItemAdded {
  int64 product_id = 1;
  int32 amount = 2;
}
message HistoryItemPayloadItemRemoved {
  int64 product_id = 1;
}
message HistoryItemPayloadStateChanged {
  string new_state = 1;
}

message OrderHistoryPayload{
  oneof payload {
    HistoryItemPayloadCreated created = 5;
    HistoryItemPayloadItemAdded item_added = 6;
    HistoryItemPayloadItemRemoved item_removed = 7;
    HistoryItemPayloadStateChanged state_changed = 8;
  }
}

message OrderHistory {
  int64 orderHistoryItemId = 1;
  int64 orderId = 2;
  google.protobuf.Timestamp createdAt = 3;
  OrderHistoryItemKind kind = 4;
  OrderHistoryPayload payload = 5;
}

